assets/styles/home.scss
@charset "UTF-8";
@import "home_project_cards";
@import "home_body_theme.scss";
@import "home_interest.scss";

/*!
 * Main
 */
#interests{
    padding-bottom: 120px;
}

#project-abstract-container{
    position: relative;
    padding-bottom: 0rem;
    padding-top: 5rem;
    min-height: 100vh;
}

.main-logo-gg{
    width:35vw; 
    max-width:140px;
    position: relative;
    right:10px;
}

/*!
 * Content
 */
.lastname{
    color: #669BBC!important;
}

#login-access{
    position: absolute;
    top: 25px;
    right: 45px;
}

.more-arrow{
    cursor: pointer;
    position: relative;
    color: #3E70AC!important;

    .more-invitation{
        text-decoration: underline;
        color: #3E70AC!important;
    }

}

.more-arrow-linkedin{
    position: relative;
    right: -3px;
    top: 7px;
}

#langage-choice-list{

    display: flex;
    align-items: center;
    justify-content: flex-start; 

    >#language-choice-select{
        width: 65px;
        border: none;
        background-color: var(--bs-secondary-rgb);

        &:focus{
            box-shadow: none;
        }
    }

}

#theme-switch{
    
    margin-left: 20px;
 
    .form-check-input{
        box-shadow: none;
        cursor: pointer;
    
        &:checked {
            background-color: #022130;
            border-color: white;
        }
    }
}

.small-custom{
    font-size: 15px;
    text-transform: lowercase;
}

#skills-worflow{
    margin-top: 50px!important;
}

/*!
 * Icons / typography
 */
.fa-google{
    font-size: 35px;
}

#sub-google-map{
    font-size: 11px;
}

#twig-language{
    font-family: IBM Plex Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
    line-height: 1.7;
    letter-spacing: -.02em;
    font-weight: 600;
    font-size: 28px;
    position: relative;
    bottom: 11px;
}

@media only screen and (min-width: 768px) {
    #langage-choice-list{
        justify-content: center!important;
    }
}

